--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="../angular/angular.js"></script>
 <script src="script.js"></script>
+<script src="init.jsonp"></script>
 
 <title>console</title>
 
@@ -13,21 +14,21 @@
 <body>
 
 <div class="main">
-
 	<div class="cards">
 		<img class="card" 
 				ng-repeat="card in unmarkedCards()" 
-				ng-src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid={{card.multiverseid}}&type=card" 
+				ng-src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid={{card.id}}&type=card" 
 				ng-click="clickCard(card)"/>
+		<!-- <div class="textCard"  -->
+				<!-- ng-repeat="card in unmarkedCards()"  -->
+				<!-- ng-click="clickCard(card)">{{getText(card)}}</div> -->
 	</div>
-
 	<div class="panel">
 		<select ng-model="selectedCode">
 			<option ng-repeat="set in sets" ng-class="set.type">{{set.name}}</option>
 		</select>
-		<button ng-click="update()">Update</button><br>
+		<button ng-click="update()">Update</button><button ng-click="previous()">&lt;</button><button ng-click="next()">&gt;</button><br>
 		<button ng-click="load()">Load</button><button ng-click="save()">Save</button>
-		<textarea class="filter" ng-model="filter" placeholder="filter logic"></textarea>
 		<div class="group" ng-repeat="group in groups track by $index" ng-show="group.length" ng-init="groupIndex = $index">
 			<div class="marked" ng-repeat="card in group" ng-click="clickMarked($event, groupIndex, $index)">{{card}}</div>
 		</div>
@@ -37,7 +38,7 @@
 	<a class="nodisplay" id="download"></a>
 
 </div>
-	
+
 </body>
 </html>
 
